force-app/main/default/objects/RestaurantBooking__c/RestaurantBooking__c.object-meta.xml
<CustomObject>
    <label>Restaurant Booking</label>
    <pluralLabel>Restaurant Bookings</pluralLabel>
    <description>Object used to track and manage restaurant reservations from external booking systems via REST API integration.</description>
    <nameField>
        <label>Booking Number</label>
        <type>AutoNumber</type>
        <displayFormat>RB-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>