force-app/main/default/objects/RestaurantBooking__c/fields/Booking_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date_Time__c</fullName>
    <label>Booking Date Time</label>
    <description>Date and time when the guest will arrive at the restaurant</description>
    <inlineHelpText>Select the date and time for your restaurant reservation</inlineHelpText>
    <type>DateTime</type>
    <required>true</required>
</CustomField>