force-app/main/default/objects/RestaurantBooking__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <label>Confirmation Number</label>
    <description>Unique confirmation number for the booking used for external system reference</description>
    <inlineHelpText>This is your booking confirmation number - provide this when you arrive at the restaurant</inlineHelpText>
    <type>AutoNumber</type>
    <displayFormat>CONF-{000000}</displayFormat>
    <startingNumber>1</startingNumber>
    <externalId>true</externalId>
</CustomField>