force-app/main/default/objects/RestaurantBooking__c/fields/Dietary_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restrictions__c</fullName>
    <label>Dietary Restrictions</label>
    <description>Dietary restrictions or allergies the restaurant should be aware of</description>
    <inlineHelpText>Enter any dietary restrictions, allergies, or special dietary requirements (e.g., vegetarian, gluten-free, nut allergy)</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>