force-app/main/default/objects/RestaurantBooking__c/fields/Guest_Email__c.field-meta.xml
<CustomField>
    <fullName>Guest_Email__c</fullName>
    <label>Guest Email</label>
    <description>Email address of the guest for booking confirmation</description>
    <inlineHelpText>Enter a valid email address to receive booking confirmation and updates</inlineHelpText>
    <type>Email</type>
    <required>true</required>
</CustomField>