force-app/main/default/objects/RestaurantBooking__c/fields/Guest_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name__c</fullName>
    <label>Guest Name</label>
    <description>Name of the guest making the restaurant booking</description>
    <inlineHelpText>Enter the full name of the guest who will be dining</inlineHelpText>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>