force-app/main/default/objects/RestaurantBooking__c/fields/Guest_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guest_Phone__c</fullName>
    <label>Guest Phone</label>
    <description>Phone number of the guest for booking confirmation and contact</description>
    <inlineHelpText>Enter a phone number where the guest can be reached regarding this booking</inlineHelpText>
    <type>Phone</type>
</CustomField>