force-app/main/default/objects/RestaurantBooking__c/fields/Party_Size__c.field-meta.xml
<CustomField>
    <fullName>Party_Size__c</fullName>
    <label>Party Size</label>
    <description>Number of guests in the party for this booking</description>
    <inlineHelpText>Enter the number of people dining (must be at least 1)</inlineHelpText>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>