force-app/main/default/objects/RestaurantBooking__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <label>Restaurant</label>
    <description>Links this booking to the specific restaurant where the reservation is made</description>
    <inlineHelpText>Select the restaurant for this booking</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Restaurant__c</referenceTo>
    <relationshipLabel>Restaurant Bookings</relationshipLabel>
    <relationshipName>Restaurant_Bookings</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>