force-app/main/default/objects/RestaurantBooking__c/fields/Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests__c</fullName>
    <label>Special Requests</label>
    <description>Any special requests or notes for the restaurant regarding this booking</description>
    <inlineHelpText>Enter any special requests such as seating preferences, occasions, or accessibility needs</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>